--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -1,1 +1,142 @@
-{"cells":[{"cell_type":"code","execution_count":null,"metadata":{"id":"X4bca3j_T0Iy"},"outputs":[],"source":["# default_exp core"]},{"cell_type":"markdown","metadata":{"id":"6A7sTe5TT0I0"},"source":["# Rater\n","\n","> API details."]},{"cell_type":"code","execution_count":5,"metadata":{"id":"3B2T9v5mT0I2","colab":{"base_uri":"https://localhost:8080/"},"executionInfo":{"status":"ok","timestamp":1690545287263,"user_tz":-180,"elapsed":14585,"user":{"displayName":"Mika Hannula","userId":"06767431405261362192"}},"outputId":"05605409-8494-4fe6-c6f6-30b06b88347f"},"outputs":[{"output_type":"stream","name":"stdout","text":["Collecting git+https://github.com/pete88b/nbdev_colab_helper.git\n","  Cloning https://github.com/pete88b/nbdev_colab_helper.git to /tmp/pip-req-build-riq8s7iu\n","  Running command git clone --filter=blob:none --quiet https://github.com/pete88b/nbdev_colab_helper.git /tmp/pip-req-build-riq8s7iu\n","  Resolved https://github.com/pete88b/nbdev_colab_helper.git to commit 15cf67b6ca0c125a636cedc017f285a04771bbff\n","  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n","Connecting to google drive\n","Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n","/content/drive/My Drive/Colab Notebooks/github/rater\n","pip install fastscript==1.0.0 fastcore==1.0.8 nbdev==1.0.14\n","   Requirement already satisfied: fastscript==1.0.0 in /usr/local/lib/python3.10/dist-packages (1.0.0)\n","Requirement already satisfied: fastcore==1.0.8 in /usr/local/lib/python3.10/dist-packages (1.0.8)\n","Requirement already satisfied: nbdev==1.0.14 in /usr/local/lib/python3.10/dist-packages (1.0.14)\n","Requirement already satisfied: pip in /usr/local/lib/python3.10/dist-packages (from fastscript==1.0.0) (23.1.2)\n","Requirement already satisfied: packaging in /usr/local/lib/python3.10/dist-packages (from fastscript==1.0.0) (23.1)\n","Requirement already satisfied: nbformat>=4.4.0 in /usr/local/lib/python3.10/dist-packages (from nbdev==1.0.14) (5.9.1)\n","Requirement already satisfied: nbconvert>=5.6.1 in /usr/local/lib/python3.10/dist-packages (from nbdev==1.0.14) (6.5.4)\n","Requirement already satisfied: pyyaml in /usr/local/lib/python3.10/dist-packages (from nbdev==1.0.14) (6.0.1)\n","Requirement already satisfied: jupyter-client in /usr/local/lib/python3.10/dist-packages (from nbdev==1.0.14) (6.1.12)\n","Requirement already satisfied: ipykernel in /usr/local/lib/python3.10/dist-packages (from nbdev==1.0.14) (5.5.6)\n","Requirement already satisfied: lxml in /usr/local/lib/python3.10/dist-packages (from nbconvert>=5.6.1->nbdev==1.0.14) (4.9.3)\n","Requirement already satisfied: beautifulsoup4 in /usr/local/lib/python3.10/dist-packages (from nbconvert>=5.6.1->nbdev==1.0.14) (4.11.2)\n","Requirement already satisfied: bleach in /usr/local/lib/python3.10/dist-packages (from nbconvert>=5.6.1->nbdev==1.0.14) (6.0.0)\n","Requirement already satisfied: defusedxml in /usr/local/lib/python3.10/dist-packages (from nbconvert>=5.6.1->nbdev==1.0.14) (0.7.1)\n","Requirement already satisfied: entrypoints>=0.2.2 in /usr/local/lib/python3.10/dist-packages (from nbconvert>=5.6.1->nbdev==1.0.14) (0.4)\n","Requirement already satisfied: jinja2>=3.0 in /usr/local/lib/python3.10/dist-packages (from nbconvert>=5.6.1->nbdev==1.0.14) (3.1.2)\n","Requirement already satisfied: jupyter-core>=4.7 in /usr/local/lib/python3.10/dist-packages (from nbconvert>=5.6.1->nbdev==1.0.14) (5.3.1)\n","Requirement already satisfied: jupyterlab-pygments in /usr/local/lib/python3.10/dist-packages (from nbconvert>=5.6.1->nbdev==1.0.14) (0.2.2)\n","Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.10/dist-packages (from nbconvert>=5.6.1->nbdev==1.0.14) (2.1.3)\n","Requirement already satisfied: mistune<2,>=0.8.1 in /usr/local/lib/python3.10/dist-packages (from nbconvert>=5.6.1->nbdev==1.0.14) (0.8.4)\n","Requirement already satisfied: nbclient>=0.5.0 in /usr/local/lib/python3.10/dist-packages (from nbconvert>=5.6.1->nbdev==1.0.14) (0.8.0)\n","Requirement already satisfied: pandocfilters>=1.4.1 in /usr/local/lib/python3.10/dist-packages (from nbconvert>=5.6.1->nbdev==1.0.14) (1.5.0)\n","Requirement already satisfied: pygments>=2.4.1 in /usr/local/lib/python3.10/dist-packages (from nbconvert>=5.6.1->nbdev==1.0.14) (2.14.0)\n","Requirement already satisfied: tinycss2 in /usr/local/lib/python3.10/dist-packages (from nbconvert>=5.6.1->nbdev==1.0.14) (1.2.1)\n","Requirement already satisfied: traitlets>=5.0 in /usr/local/lib/python3.10/dist-packages (from nbconvert>=5.6.1->nbdev==1.0.14) (5.7.1)\n","Requirement already satisfied: fastjsonschema in /usr/local/lib/python3.10/dist-packages (from nbformat>=4.4.0->nbdev==1.0.14) (2.18.0)\n","Requirement already satisfied: jsonschema>=2.6 in /usr/local/lib/python3.10/dist-packages (from nbformat>=4.4.0->nbdev==1.0.14) (4.3.3)\n","Requirement already satisfied: ipython-genutils in /usr/local/lib/python3.10/dist-packages (from ipykernel->nbdev==1.0.14) (0.2.0)\n","Requirement already satisfied: ipython>=5.0.0 in /usr/local/lib/python3.10/dist-packages (from ipykernel->nbdev==1.0.14) (7.34.0)\n","Requirement already satisfied: tornado>=4.2 in /usr/local/lib/python3.10/dist-packages (from ipykernel->nbdev==1.0.14) (6.3.1)\n","Requirement already satisfied: pyzmq>=13 in /usr/local/lib/python3.10/dist-packages (from jupyter-client->nbdev==1.0.14) (23.2.1)\n","Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.10/dist-packages (from jupyter-client->nbdev==1.0.14) (2.8.2)\n","Requirement already satisfied: setuptools>=18.5 in /usr/local/lib/python3.10/dist-packages (from ipython>=5.0.0->ipykernel->nbdev==1.0.14) (67.7.2)\n","Requirement already satisfied: jedi>=0.16 in /usr/local/lib/python3.10/dist-packages (from ipython>=5.0.0->ipykernel->nbdev==1.0.14) (0.18.2)\n","Requirement already satisfied: decorator in /usr/local/lib/python3.10/dist-packages (from ipython>=5.0.0->ipykernel->nbdev==1.0.14) (4.4.2)\n","Requirement already satisfied: pickleshare in /usr/local/lib/python3.10/dist-packages (from ipython>=5.0.0->ipykernel->nbdev==1.0.14) (0.7.5)\n","Requirement already satisfied: prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from ipython>=5.0.0->ipykernel->nbdev==1.0.14) (3.0.39)\n","Requirement already satisfied: backcall in /usr/local/lib/python3.10/dist-packages (from ipython>=5.0.0->ipykernel->nbdev==1.0.14) (0.2.0)\n","Requirement already satisfied: matplotlib-inline in /usr/local/lib/python3.10/dist-packages (from ipython>=5.0.0->ipykernel->nbdev==1.0.14) (0.1.6)\n","Requirement already satisfied: pexpect>4.3 in /usr/local/lib/python3.10/dist-packages (from ipython>=5.0.0->ipykernel->nbdev==1.0.14) (4.8.0)\n","Requirement already satisfied: attrs>=17.4.0 in /usr/local/lib/python3.10/dist-packages (from jsonschema>=2.6->nbformat>=4.4.0->nbdev==1.0.14) (23.1.0)\n","Requirement already satisfied: pyrsistent!=0.17.0,!=0.17.1,!=0.17.2,>=0.14.0 in /usr/local/lib/python3.10/dist-packages (from jsonschema>=2.6->nbformat>=4.4.0->nbdev==1.0.14) (0.19.3)\n","Requirement already satisfied: platformdirs>=2.5 in /usr/local/lib/python3.10/dist-packages (from jupyter-core>=4.7->nbconvert>=5.6.1->nbdev==1.0.14) (3.9.1)\n","Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.1->jupyter-client->nbdev==1.0.14) (1.16.0)\n","Requirement already satisfied: soupsieve>1.2 in /usr/local/lib/python3.10/dist-packages (from beautifulsoup4->nbconvert>=5.6.1->nbdev==1.0.14) (2.4.1)\n","Requirement already satisfied: webencodings in /usr/local/lib/python3.10/dist-packages (from bleach->nbconvert>=5.6.1->nbdev==1.0.14) (0.5.1)\n","Requirement already satisfied: parso<0.9.0,>=0.8.0 in /usr/local/lib/python3.10/dist-packages (from jedi>=0.16->ipython>=5.0.0->ipykernel->nbdev==1.0.14) (0.8.3)\n","Requirement already satisfied: ptyprocess>=0.5 in /usr/local/lib/python3.10/dist-packages (from pexpect>4.3->ipython>=5.0.0->ipykernel->nbdev==1.0.14) (0.7.0)\n","Requirement already satisfied: wcwidth in /usr/local/lib/python3.10/dist-packages (from prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0->ipython>=5.0.0->ipykernel->nbdev==1.0.14) (0.2.6) \n","/content/drive/My Drive/Colab Notebooks/github/rater\n"]}],"source":["IN_COLAB = 'google.colab' in str(get_ipython())\n","if IN_COLAB:\n","  !pip install git+https://github.com/pete88b/nbdev_colab_helper.git\n","  from nbdev_colab_helper.core import *\n","  project_name = 'rater'\n","  init_notebook(project_name)"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"fdXOkT9WT0I1"},"outputs":[],"source":["#hide\n","from nbdev.showdoc import *"]},{"cell_type":"code","source":["%nbdev_export\n","def nbdev_test(to):\n","    '''Simple test function'''\n","    return f'Hello {to}!'"],"metadata":{"id":"FHGnmUKPUb-A"},"execution_count":null,"outputs":[]},{"cell_type":"code","source":["assert nbdev_test(\"X\")==\"Hello X!\""],"metadata":{"id":"ClUGKAacU7Sc"},"execution_count":null,"outputs":[]}],"metadata":{"kernelspec":{"display_name":"Python 3","language":"python","name":"python3"},"colab":{"provenance":[]}},"nbformat":4,"nbformat_minor":0}
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# default_exp core"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Rater\n",
+    "\n",
+    "> API details."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting git+https://github.com/pete88b/nbdev_colab_helper.git\n",
+      "  Cloning https://github.com/pete88b/nbdev_colab_helper.git to /tmp/pip-req-build-riq8s7iu\n",
+      "  Running command git clone --filter=blob:none --quiet https://github.com/pete88b/nbdev_colab_helper.git /tmp/pip-req-build-riq8s7iu\n",
+      "  Resolved https://github.com/pete88b/nbdev_colab_helper.git to commit 15cf67b6ca0c125a636cedc017f285a04771bbff\n",
+      "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+      "Connecting to google drive\n",
+      "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
+      "/content/drive/My Drive/Colab Notebooks/github/rater\n",
+      "pip install fastscript==1.0.0 fastcore==1.0.8 nbdev==1.0.14\n",
+      "   Requirement already satisfied: fastscript==1.0.0 in /usr/local/lib/python3.10/dist-packages (1.0.0)\n",
+      "Requirement already satisfied: fastcore==1.0.8 in /usr/local/lib/python3.10/dist-packages (1.0.8)\n",
+      "Requirement already satisfied: nbdev==1.0.14 in /usr/local/lib/python3.10/dist-packages (1.0.14)\n",
+      "Requirement already satisfied: pip in /usr/local/lib/python3.10/dist-packages (from fastscript==1.0.0) (23.1.2)\n",
+      "Requirement already satisfied: packaging in /usr/local/lib/python3.10/dist-packages (from fastscript==1.0.0) (23.1)\n",
+      "Requirement already satisfied: nbformat>=4.4.0 in /usr/local/lib/python3.10/dist-packages (from nbdev==1.0.14) (5.9.1)\n",
+      "Requirement already satisfied: nbconvert>=5.6.1 in /usr/local/lib/python3.10/dist-packages (from nbdev==1.0.14) (6.5.4)\n",
+      "Requirement already satisfied: pyyaml in /usr/local/lib/python3.10/dist-packages (from nbdev==1.0.14) (6.0.1)\n",
+      "Requirement already satisfied: jupyter-client in /usr/local/lib/python3.10/dist-packages (from nbdev==1.0.14) (6.1.12)\n",
+      "Requirement already satisfied: ipykernel in /usr/local/lib/python3.10/dist-packages (from nbdev==1.0.14) (5.5.6)\n",
+      "Requirement already satisfied: lxml in /usr/local/lib/python3.10/dist-packages (from nbconvert>=5.6.1->nbdev==1.0.14) (4.9.3)\n",
+      "Requirement already satisfied: beautifulsoup4 in /usr/local/lib/python3.10/dist-packages (from nbconvert>=5.6.1->nbdev==1.0.14) (4.11.2)\n",
+      "Requirement already satisfied: bleach in /usr/local/lib/python3.10/dist-packages (from nbconvert>=5.6.1->nbdev==1.0.14) (6.0.0)\n",
+      "Requirement already satisfied: defusedxml in /usr/local/lib/python3.10/dist-packages (from nbconvert>=5.6.1->nbdev==1.0.14) (0.7.1)\n",
+      "Requirement already satisfied: entrypoints>=0.2.2 in /usr/local/lib/python3.10/dist-packages (from nbconvert>=5.6.1->nbdev==1.0.14) (0.4)\n",
+      "Requirement already satisfied: jinja2>=3.0 in /usr/local/lib/python3.10/dist-packages (from nbconvert>=5.6.1->nbdev==1.0.14) (3.1.2)\n",
+      "Requirement already satisfied: jupyter-core>=4.7 in /usr/local/lib/python3.10/dist-packages (from nbconvert>=5.6.1->nbdev==1.0.14) (5.3.1)\n",
+      "Requirement already satisfied: jupyterlab-pygments in /usr/local/lib/python3.10/dist-packages (from nbconvert>=5.6.1->nbdev==1.0.14) (0.2.2)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.10/dist-packages (from nbconvert>=5.6.1->nbdev==1.0.14) (2.1.3)\n",
+      "Requirement already satisfied: mistune<2,>=0.8.1 in /usr/local/lib/python3.10/dist-packages (from nbconvert>=5.6.1->nbdev==1.0.14) (0.8.4)\n",
+      "Requirement already satisfied: nbclient>=0.5.0 in /usr/local/lib/python3.10/dist-packages (from nbconvert>=5.6.1->nbdev==1.0.14) (0.8.0)\n",
+      "Requirement already satisfied: pandocfilters>=1.4.1 in /usr/local/lib/python3.10/dist-packages (from nbconvert>=5.6.1->nbdev==1.0.14) (1.5.0)\n",
+      "Requirement already satisfied: pygments>=2.4.1 in /usr/local/lib/python3.10/dist-packages (from nbconvert>=5.6.1->nbdev==1.0.14) (2.14.0)\n",
+      "Requirement already satisfied: tinycss2 in /usr/local/lib/python3.10/dist-packages (from nbconvert>=5.6.1->nbdev==1.0.14) (1.2.1)\n",
+      "Requirement already satisfied: traitlets>=5.0 in /usr/local/lib/python3.10/dist-packages (from nbconvert>=5.6.1->nbdev==1.0.14) (5.7.1)\n",
+      "Requirement already satisfied: fastjsonschema in /usr/local/lib/python3.10/dist-packages (from nbformat>=4.4.0->nbdev==1.0.14) (2.18.0)\n",
+      "Requirement already satisfied: jsonschema>=2.6 in /usr/local/lib/python3.10/dist-packages (from nbformat>=4.4.0->nbdev==1.0.14) (4.3.3)\n",
+      "Requirement already satisfied: ipython-genutils in /usr/local/lib/python3.10/dist-packages (from ipykernel->nbdev==1.0.14) (0.2.0)\n",
+      "Requirement already satisfied: ipython>=5.0.0 in /usr/local/lib/python3.10/dist-packages (from ipykernel->nbdev==1.0.14) (7.34.0)\n",
+      "Requirement already satisfied: tornado>=4.2 in /usr/local/lib/python3.10/dist-packages (from ipykernel->nbdev==1.0.14) (6.3.1)\n",
+      "Requirement already satisfied: pyzmq>=13 in /usr/local/lib/python3.10/dist-packages (from jupyter-client->nbdev==1.0.14) (23.2.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.10/dist-packages (from jupyter-client->nbdev==1.0.14) (2.8.2)\n",
+      "Requirement already satisfied: setuptools>=18.5 in /usr/local/lib/python3.10/dist-packages (from ipython>=5.0.0->ipykernel->nbdev==1.0.14) (67.7.2)\n",
+      "Requirement already satisfied: jedi>=0.16 in /usr/local/lib/python3.10/dist-packages (from ipython>=5.0.0->ipykernel->nbdev==1.0.14) (0.18.2)\n",
+      "Requirement already satisfied: decorator in /usr/local/lib/python3.10/dist-packages (from ipython>=5.0.0->ipykernel->nbdev==1.0.14) (4.4.2)\n",
+      "Requirement already satisfied: pickleshare in /usr/local/lib/python3.10/dist-packages (from ipython>=5.0.0->ipykernel->nbdev==1.0.14) (0.7.5)\n",
+      "Requirement already satisfied: prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from ipython>=5.0.0->ipykernel->nbdev==1.0.14) (3.0.39)\n",
+      "Requirement already satisfied: backcall in /usr/local/lib/python3.10/dist-packages (from ipython>=5.0.0->ipykernel->nbdev==1.0.14) (0.2.0)\n",
+      "Requirement already satisfied: matplotlib-inline in /usr/local/lib/python3.10/dist-packages (from ipython>=5.0.0->ipykernel->nbdev==1.0.14) (0.1.6)\n",
+      "Requirement already satisfied: pexpect>4.3 in /usr/local/lib/python3.10/dist-packages (from ipython>=5.0.0->ipykernel->nbdev==1.0.14) (4.8.0)\n",
+      "Requirement already satisfied: attrs>=17.4.0 in /usr/local/lib/python3.10/dist-packages (from jsonschema>=2.6->nbformat>=4.4.0->nbdev==1.0.14) (23.1.0)\n",
+      "Requirement already satisfied: pyrsistent!=0.17.0,!=0.17.1,!=0.17.2,>=0.14.0 in /usr/local/lib/python3.10/dist-packages (from jsonschema>=2.6->nbformat>=4.4.0->nbdev==1.0.14) (0.19.3)\n",
+      "Requirement already satisfied: platformdirs>=2.5 in /usr/local/lib/python3.10/dist-packages (from jupyter-core>=4.7->nbconvert>=5.6.1->nbdev==1.0.14) (3.9.1)\n",
+      "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.1->jupyter-client->nbdev==1.0.14) (1.16.0)\n",
+      "Requirement already satisfied: soupsieve>1.2 in /usr/local/lib/python3.10/dist-packages (from beautifulsoup4->nbconvert>=5.6.1->nbdev==1.0.14) (2.4.1)\n",
+      "Requirement already satisfied: webencodings in /usr/local/lib/python3.10/dist-packages (from bleach->nbconvert>=5.6.1->nbdev==1.0.14) (0.5.1)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.0 in /usr/local/lib/python3.10/dist-packages (from jedi>=0.16->ipython>=5.0.0->ipykernel->nbdev==1.0.14) (0.8.3)\n",
+      "Requirement already satisfied: ptyprocess>=0.5 in /usr/local/lib/python3.10/dist-packages (from pexpect>4.3->ipython>=5.0.0->ipykernel->nbdev==1.0.14) (0.7.0)\n",
+      "Requirement already satisfied: wcwidth in /usr/local/lib/python3.10/dist-packages (from prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0->ipython>=5.0.0->ipykernel->nbdev==1.0.14) (0.2.6) \n",
+      "/content/drive/My Drive/Colab Notebooks/github/rater\n"
+     ]
+    }
+   ],
+   "source": [
+    "IN_COLAB = 'google.colab' in str(get_ipython())\n",
+    "if IN_COLAB:\n",
+    "  !pip install git+https://github.com/pete88b/nbdev_colab_helper.git\n",
+    "  from nbdev_colab_helper.core import *\n",
+    "  project_name = 'rater'\n",
+    "  init_notebook(project_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hide\n",
+    "from nbdev.showdoc import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%nbdev_export\n",
+    "def nbdev_test(to):\n",
+    "    '''Simple test function'''\n",
+    "    return f'Hello {to}!'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert nbdev_test(\"X\")==\"Hello X!\""
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
+}
