--- a/index.ipynb
+++ b/index.ipynb
@@ -14,9 +14,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project name here\n",
+    "# rater\n",
     "\n",
-    "> Summary description here."
+    "> Gather aggregated ratings for S&P500 stocks."
    ]
   },
   {
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`pip install your_project_name`"
+    "`pip install rater`"
    ]
   },
   {
