--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "%nbdev_export\n",
-    "def nbdev_test(to):\n",
+    "def say_hello(to):\n",
     "    '''Simple test function'''\n",
     "    return f'Hello {to}!'"
    ]
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert nbdev_test(\"X\")==\"Hello X!\""
+    "assert say_hello(\"X\")==\"Hello X!\""
    ]
   },
   {
