--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# default_exp core"
+    "# default_exp core\n",
+    "%nbdev_default_export core"
    ]
   },
   {
