--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -6,8 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# default_exp core\n",
-    "%nbdev_default_export core"
+    "# default_exp core"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %nbdev_default_export core"
    ]
   },
   {
@@ -25,6 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#hide\n",
     "IN_COLAB = 'google.colab' in str(get_ipython())\n",
     "if IN_COLAB:\n",
     "  !pip install git+https://github.com/pete88b/nbdev_colab_helper.git\n",
@@ -49,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%nbdev_export\n",
+    "#export\n",
     "def say_hello(to):\n",
     "    '''Simple test function'''\n",
     "    return f'Hello {to}!'"
@@ -70,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%nbdev_export\n",
+    "#export\n",
     "class HelloSayer:\n",
     "    \"Say hello to `to` using `say_hello`\"\n",
     "    def __init__(self, to): self.to = to\n",
